--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "lottie-react": "^2.4.1",
     "next": "15.2.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "swr": "^2.3.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
