--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.49.4",
     "lottie-react": "^2.4.1",
     "next": "15.2.4",
     "react": "^19.0.0",
