feat: ✨ Blog management and enhance admin interface

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.49.4",
+    "@tiptap/react": "^2.11.7",
+    "@tiptap/starter-kit": "^2.11.7",
     "@types/bcryptjs": "^2.4.6",
     "bcryptjs": "^3.0.2",
     "lottie-react": "^2.4.1",
